marked as unreleased

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kdebluetooth4 (0.3-1) unstable; urgency=low
+kdebluetooth4 (0.3-1) UNRELEASED; urgency=low
 
   * Initial release of kde4 version.
 
